# skill-graph

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  skills-lock.json
.playwright-mcp/: page-2026-04-18T05-25-47-311Z.yml  page-2026-04-18T05-26-13-910Z.yml  page-2026-04-18T05-27-03-569Z.yml  page-2026-04-22T07-02-13-753Z.yml
34k处理后/: generation_log.json  validation_report.txt
34k处理后/34k处理新版/: plan.md  synthetic_queries_batch_000.jsonl  synthetic_queries_batch_001.jsonl  synthetic_queries_batch_002.jsonl  synthetic_queries_batch_003.jsonl  synthetic_queries_batch_004.jsonl  synthetic_queries_batch_005.jsonl  synthetic_queries_batch_006.jsonl  synthetic_queries_batch_007.jsonl  synthetic_queries_batch_008.jsonl  synthetic_queries_batch_009.jsonl  synthetic_queries_batch_010.jsonl  synthetic_queries_batch_011.jsonl  synthetic_queries_batch_012.jsonl  (+131 more)
ai-traces/: master-log.md  subagent-log.md
config/: keywords.json  keywords_auto.json
docs/: OBJECTIVES.md  PROMPT_KIMI_AGENT_CLUSTER.md  ROADMAP.md  one-pager.html  skillgraph-one-pager.html  skillrouter_comparison.md
docs-landing/: index.html
docs-process/: skill_retrieval_research_proposal.md
evals/: build_ucsb_skills.py  eval_compare_keywords.py  eval_multi_vector.py  eval_skillsbench.py  eval_with_dedup.py
paper/: figure-design-guide.md  main.tex  synthetic_query_prompt.md
plan/: skill_graph_implementation.md
reports/: project_report.md
scripts/: build_multi_vector_index.py  clean_manual_benchmark.py  synq_ablation.py
skill_graph/: __init__.py  models.py
temp/: REPAIR_REPORT_ARCHIVED.md
(+355 files in other folders)
