[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-graph"
version = "0.1.0"
description = "Sparse Attention-based Skill Retrieval for LLM Agents"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
    "networkx>=3.1",
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "langchain>=0.1",
    "openai>=1.0",
    "tqdm>=4.65",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "mypy>=1.5", "ruff>=0.1"]
neo4j = ["neo4j>=5.0"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
